--- a/Part2/index.html
+++ b/Part2/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <h1>Give Feedback</h1>
+    <h1>Web Development Curriculum</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
